infrastructure/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.global-static-ip-name: "public-ip"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - curso-k8s.ddns.net
      secretName: apps-tls
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - host: curso-k8s.ddns.net
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /*
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: ImplementationSpecific
            path: /prometheus
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
